storaged: Fix StorageBarMenu in dark mode

--- a/pkg/storaged/storage.scss
+++ b/pkg/storaged/storage.scss
@@ -75,6 +75,10 @@
   vertical-align: top;
 }
 
+#storage .storage-sidebar .pf-v5-c-dropdown__toggle {
+  padding-inline: var(--pf-v5-global--spacer--md);
+}
+
 .dialog-select-row-table {
   inline-size: 100%;
 }
